SONAR-15514 Create api/qualitygates/search_users service