@@ -17,27 +17,23 @@
  * along with this program; if not, write to the Free Software Foundation,
  * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  */
-package org.sonar.server.qualityprofile.ws;
+package org.sonar.server.qualitygate.ws;
 
-import com.google.common.collect.ImmutableMap;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import org.sonar.api.resources.Language;
-import org.sonar.api.resources.Languages;
 import org.sonar.api.server.ws.Request;
 import org.sonar.api.server.ws.Response;
 import org.sonar.api.server.ws.WebService;
 import org.sonar.api.server.ws.WebService.SelectionMode;
 import org.sonar.db.DbClient;
 import org.sonar.db.DbSession;
-import org.sonar.db.qualityprofile.QProfileDto;
-import org.sonar.db.qualityprofile.SearchQualityProfilePermissionQuery;
+import org.sonar.db.qualitygate.QualityGateDto;
+import org.sonar.db.user.SearchPermissionQuery;
 import org.sonar.db.user.SearchUserMembershipDto;
 import org.sonar.db.user.UserDto;
 import org.sonar.server.issue.AvatarResolver;
 import org.sonarqube.ws.Common;
-import org.sonarqube.ws.Qualityprofiles.SearchUsersResponse;
+import org.sonarqube.ws.Qualitygates.SearchUsersResponse;
 
 import static com.google.common.base.Strings.emptyToNull;
 import static java.util.Optional.ofNullable;
@@ -49,31 +45,27 @@ import static org.sonar.api.server.ws.WebService.SelectionMode.ALL;
 import static org.sonar.api.server.ws.WebService.SelectionMode.DESELECTED;
 import static org.sonar.api.server.ws.WebService.SelectionMode.fromParam;
 import static org.sonar.core.util.stream.MoreCollectors.toList;
-import static org.sonar.core.util.stream.MoreCollectors.toSet;
 import static org.sonar.core.util.stream.MoreCollectors.uniqueIndex;
 import static org.sonar.db.Pagination.forPage;
-import static org.sonar.db.qualityprofile.SearchQualityProfilePermissionQuery.ANY;
-import static org.sonar.db.qualityprofile.SearchQualityProfilePermissionQuery.IN;
-import static org.sonar.db.qualityprofile.SearchQualityProfilePermissionQuery.OUT;
-import static org.sonar.db.qualityprofile.SearchQualityProfilePermissionQuery.builder;
+import static org.sonar.db.qualitygate.SearchQualityGatePermissionQuery.builder;
+import static org.sonar.db.user.SearchPermissionQuery.ANY;
+import static org.sonar.db.user.SearchPermissionQuery.IN;
+import static org.sonar.db.user.SearchPermissionQuery.OUT;
+import static org.sonar.server.qualitygate.ws.QualityGatesWsParameters.ACTION_SEARCH_USERS;
+import static org.sonar.server.qualitygate.ws.QualityGatesWsParameters.PARAM_GATE_NAME;
 import static org.sonar.server.ws.WsUtils.writeProtobuf;
-import static org.sonarqube.ws.client.qualityprofile.QualityProfileWsParameters.ACTION_SEARCH_USERS;
-import static org.sonarqube.ws.client.qualityprofile.QualityProfileWsParameters.PARAM_LANGUAGE;
-import static org.sonarqube.ws.client.qualityprofile.QualityProfileWsParameters.PARAM_QUALITY_PROFILE;
 
-public class SearchUsersAction implements QProfileWsAction {
+public class SearchUsersAction implements QualityGatesWsAction {
 
-  private static final Map<SelectionMode, String> MEMBERSHIP = ImmutableMap.of(SelectionMode.SELECTED, IN, DESELECTED, OUT, ALL, ANY);
+  private static final Map<SelectionMode, String> MEMBERSHIP = Map.of(SelectionMode.SELECTED, IN, DESELECTED, OUT, ALL, ANY);
 
   private final DbClient dbClient;
-  private final QProfileWsSupport wsSupport;
-  private final Languages languages;
+  private final QualityGatesWsSupport wsSupport;
   private final AvatarResolver avatarResolver;
 
-  public SearchUsersAction(DbClient dbClient, QProfileWsSupport wsSupport, Languages languages, AvatarResolver avatarResolver) {
+  public SearchUsersAction(DbClient dbClient, QualityGatesWsSupport wsSupport, AvatarResolver avatarResolver) {
     this.dbClient = dbClient;
     this.wsSupport = wsSupport;
-    this.languages = languages;
     this.avatarResolver = avatarResolver;
   }
 
@@ -81,11 +73,11 @@ public class SearchUsersAction implements QProfileWsAction {
   public void define(WebService.NewController context) {
     WebService.NewAction action = context
       .createAction(ACTION_SEARCH_USERS)
-      .setDescription("List the users that are allowed to edit a Quality Profile.<br>" +
+      .setDescription("List the users that are allowed to edit a Quality Gate.<br>" +
         "Requires one of the following permissions:" +
         "<ul>" +
-        "  <li>'Administer Quality Profiles'</li>" +
-        "  <li>Edit right on the specified quality profile</li>" +
+        "  <li>'Administer Quality Gates'</li>" +
+        "  <li>Edit right on the specified quality gate</li>" +
         "</ul>")
       .setHandler(this)
       .setInternal(true)
@@ -93,34 +85,28 @@ public class SearchUsersAction implements QProfileWsAction {
       .addSelectionModeParam()
       .addPagingParams(25)
       .setResponseExample(getClass().getResource("search_users-example.json"))
-      .setSince("6.6");
+      .setSince("9.2");
 
-    action.createParam(PARAM_QUALITY_PROFILE)
-      .setDescription("Quality Profile name")
+    action.createParam(PARAM_GATE_NAME)
+      .setDescription("Quality Gate name")
       .setRequired(true)
-      .setExampleValue("Recommended quality profile");
-
-    action
-      .createParam(PARAM_LANGUAGE)
-      .setDescription("Quality profile language")
-      .setRequired(true)
-      .setPossibleValues(Arrays.stream(languages.all()).map(Language::getKey).collect(toSet()));
+      .setExampleValue("Recommended quality gate");
   }
 
   @Override
   public void handle(Request request, Response response) throws Exception {
-    SearchQualityProfileUsersRequest wsRequest = buildRequest(request);
+    SearchQualityGateUsersRequest wsRequest = buildRequest(request);
     try (DbSession dbSession = dbClient.openSession(false)) {
-      QProfileDto profile = wsSupport.getProfile(dbSession, wsRequest.getQualityProfile(), wsRequest.getLanguage());
-      wsSupport.checkCanEdit(dbSession, profile);
+      QualityGateDto gate = wsSupport.getByName(dbSession, wsRequest.getQualityGate());
+      wsSupport.checkCanLimitedEdit(dbSession, gate);
 
-      SearchQualityProfilePermissionQuery query = builder()
-        .setProfile(profile)
+      SearchPermissionQuery query = builder()
+        .setQualityGate(gate)
         .setQuery(wsRequest.getQuery())
         .setMembership(MEMBERSHIP.get(fromParam(wsRequest.getSelected())))
         .build();
-      int total = dbClient.qProfileEditUsersDao().countByQuery(dbSession, query);
-      List<SearchUserMembershipDto> usersMembership = dbClient.qProfileEditUsersDao().selectByQuery(dbSession, query,
+      int total = dbClient.qualityGateUserPermissionDao().countByQuery(dbSession, query);
+      List<SearchUserMembershipDto> usersMembership = dbClient.qualityGateUserPermissionDao().selectByQuery(dbSession, query,
         forPage(wsRequest.getPage()).andSize(wsRequest.getPageSize()));
       Map<String, UserDto> usersById = dbClient.userDao().selectByUuids(dbSession, usersMembership.stream().map(SearchUserMembershipDto::getUserUuid).collect(toList()))
         .stream().collect(uniqueIndex(UserDto::getUuid));
@@ -134,10 +120,9 @@ public class SearchUsersAction implements QProfileWsAction {
     }
   }
 
-  private static SearchQualityProfileUsersRequest buildRequest(Request request) {
-    return SearchQualityProfileUsersRequest.builder()
-      .setQualityProfile(request.mandatoryParam(PARAM_QUALITY_PROFILE))
-      .setLanguage(request.mandatoryParam(PARAM_LANGUAGE))
+  private static SearchQualityGateUsersRequest buildRequest(Request request) {
+    return SearchQualityGateUsersRequest.builder()
+      .setQualityGate(request.mandatoryParam(PARAM_GATE_NAME))
       .setQuery(request.param(TEXT_QUERY))
       .setSelected(request.mandatoryParam(SELECTED))
       .setPage(request.mandatoryParamAsInt(PAGE))
@@ -155,12 +140,13 @@ public class SearchUsersAction implements QProfileWsAction {
       .build();
   }
 
-  private static Common.Paging buildPaging(SearchQualityProfileUsersRequest wsRequest, int total) {
+  private static Common.Paging buildPaging(SearchQualityGateUsersRequest wsRequest, int total) {
     return Common.Paging.newBuilder()
       .setPageIndex(wsRequest.getPage())
       .setPageSize(wsRequest.getPageSize())
       .setTotal(total)
       .build();
   }
+
 
 }
